...
            "state" : "translated",
            "value" : "共有できる利用券コードがありません。"
          }
        }
      }
    },
    "공휴일 달력" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Holiday calendar"
...
            "state" : "translated",
            "value" : "あとで受信"
          }
        }
      }
    },
    "날씨 지역" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weather region"
...
            "state" : "translated",
            "value" : "自分のアラームを設定"
          }
        }
      }
    },
    "내 정보 · 앱 설정" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "My info · App settings"
...
            "state" : "translated",
            "value" : "午後を選択中"
          }
        }
      }
    },
    "운세 정보" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fortune info"
...
            "state" : "translated",
            "value" : "カスタム設定"
          }
        }
      }
    },
    "직접 입력" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Type manually"
...
